IGNITE-18230 Packaging: Add MSI installer for winget package (#1368)
* Use the setupbuilder plugin to create MSI installer for the ignite3-db.
* Use `gradlew msi` to create an installer in the `packaging\db\build\distributions\ignite3-db-3.0.0.msi`.
* Update Micronaut since the old version doesn't work when installed in the path with spaces.